--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,9 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
+    link(rel='stylesheet', href='/public/vendor/bootstrap/dist/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
-    script(src='/javascripts/bootstrap.js')
+    script(src='/vendor/jquery/jquery.js')
+    script(src='/vendor/bootstrap/dist/js/bootstrap.js')
