--- a/views/person/create.jade
+++ b/views/person/create.jade
@@ -1,5 +1,12 @@
 extends ../layout
-
 block content
-h1= title
-p Welcome to #{title}
+    h1= title
+    form(name="login", role="form", method="post", action="create", enctype="application/x-www-form-urlencoded")
+        div.form-group
+            label(for="first-name")
+            input(type="text", class="form-control", id="first-name", name='firstname', placeholder="First Name")
+        div.form-group
+            label(for="last-name")
+            input(type="text", class="form-control", id="last-name", name="lastname", placeholder="Last Name")
+        input(type="submit", class="btn btn-default")
+        //button.btn(type="submit", class="btn btn-default", data-action="bea") Submit
