--- a/views/person/edit.html
+++ b/views/person/edit.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title></title><link rel="stylesheet" href="/stylesheets/style.css"></head><body></body></html>
+<!DOCTYPE html><html><head><title></title><link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.css"><link rel="stylesheet" href="/stylesheets/style.css"></head><body><h1></h1><p>Welcome to </p><script src="/vendor/jquery/jquery.js"></script><script src="/vendor/bootstrap/dist/js/bootstrap.js"></script></body></html>
