Implemented create and list persons feature

--- a/views/person/index.jade
+++ b/views/person/index.jade
@@ -8,7 +8,7 @@ block content
                     th First Name
                     th Last Name
             tbody
-                each person in Persons
+                each person in persons
                     tr
                         td= person.FirstName
                         td= person.LastName
