--- a/views/person/create.jade
+++ b/views/person/create.jade
@@ -1,7 +1,7 @@
 extends ../layout
 block content
     h1= title
-    form(name="login", role="form", method="post", action="create", enctype="application/x-www-form-urlencoded")
+    form(name="create", role="form", method="post", action="/person/create", enctype="application/x-www-form-urlencoded")
         div.form-group
             label(for="first-name")
             input(type="text", class="form-control", id="first-name", name='firstname', placeholder="First Name")
@@ -9,4 +9,3 @@ block content
             label(for="last-name")
             input(type="text", class="form-control", id="last-name", name="lastname", placeholder="Last Name")
         input(type="submit", class="btn btn-default")
-        //button.btn(type="submit", class="btn btn-default", data-action="bea") Submit
