--- a/views/person/delete.jade
+++ b/views/person/delete.jade
@@ -1,4 +1,7 @@
 extends ../layout
 block content
     h1= title
-    p Welcome to #{title}
+    p #{person.FirstName} #{person.LastName}
+    form(name="delete", role="form", method="post", action="/person/delete/#{person._id}", enctype="application/x-www-form-urlencoded")
+        input(type="hidden", name="_method" value="DELETE")
+        input(type="submit", class="btn btn-default" value="Delete")
