--- a/views/person/edit.jade
+++ b/views/person/edit.jade
@@ -1,4 +1,12 @@
 extends ../layout
 block content
     h1= title
-    p Welcome to #{title}
+     form(name="edit", role="form", method="post", action="/person/edit/#{person._id}", enctype="application/x-www-form-urlencoded")
+        div.form-group
+            label(for="first-name")
+            input(type="text", class="form-control", id="first-name", name='firstname', value='#{person.FirstName}', placeholder="First Name")
+        div.form-group
+            label(for="last-name")
+            input(type="text", class="form-control", id="last-name", name="lastname", value='#{person.LastName}', placeholder="Last Name")
+        input(type="hidden", name="_method" value="PUT")
+        input(type="submit", class="btn btn-default")
